syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sp.grpcProto";

service PartnerService{
  rpc FetchPartnerExist(PartnersGRPCRequest) returns (PartnersGRPCResponse);
}

message PartnersGRPCRequest{
  int64 partnerId = 1;
}

message PartnersGRPCResponse{
  bool doesExist = 1;
}
